--- a/openapi-defs/api_store/CVP-fr.yaml
+++ b/openapi-defs/api_store/CVP-fr.yaml
@@ -3,7 +3,9 @@ x-api-store-tags:
   - medical reactions
   - health products
 x-api-store-short-desc: |
+  La base de données en ligne des effets indésirables de Canada Vigilance renferme de l'information au sujet des effets indésirables soupçonnés (ou effets secondaires) associés à des produits de santé.
 x-api-store-long-desc: |
+  La base de données en ligne des effets indésirables de Canada Vigilance renferme de l'information au sujet des effets indésirables soupçonnés (ou effets secondaires) associés à des produits de santé.
 x-api-store-documentation: Veuillez consulter la documentation OpenAPI
 x-api-store-phone: '613-697-3966'
 x-api-store-sensitivity: Unclassified
