--- a/openapi-defs/api_store/NOC-fr.yaml
+++ b/openapi-defs/api_store/NOC-fr.yaml
@@ -5,7 +5,11 @@ x-api-store-tags:
   - drugs
   - veterinary
 x-api-store-short-desc: |
+  Avis de conformité (AC) émis au fabricant si la présentation de drogue nouvelle est jugée conforme au Règlement sur les aliments et drogues après un examen complet.
 x-api-store-long-desc: |
+  Un Avis de conformité (AC) est émis au fabricant si la présentation de drogue nouvelle est jugée conforme au Règlement sur les aliments et drogues après un examen complet.
+
+  La base de données est mise à jour tous les soirs et elle comprend des renseignements sur les AC concernant les médicaments pour usage humain émis depuis le 1er janvier 1994 jusqu'à ce jour. Elle comprend également les renseignements sur les AC concernant les médicaments vétérinaires émis depuis le 19 septembre 2000 jusqu'à ce jour. Santé Canada ajoutera progressivement les AC concernant les médicaments vétérinaires émis entre le 1er janvier 1994 et le 18 septembre 2000.
 x-api-store-documentation: Veuillez consulter la documentation OpenAPI
 x-api-store-phone: '613-954-2964'
 x-api-store-sensitivity: Unclassified
