--- a/openapi-defs/api_store/SR-en.yaml
+++ b/openapi-defs/api_store/SR-en.yaml
@@ -4,8 +4,10 @@ x-api-store-tags:
   - health products
   - drugs
 x-api-store-short-desc: |
+  The Drug and Health Product Register brings together information on product licences, drug and health product inspections, buying and using products safely, and side effects, recalls and complaints.
 x-api-store-long-desc: |
-x-api-store-documentation: Veuillez consulter la documentation OpenAPI
+  The Drug and Health Product Register brings together information on product licences, drug and health product inspections, buying and using products safely, and side effects, recalls and complaints.
+x-api-store-documentation: See OpenAPI documentation
 x-api-store-phone: '613-222-7658'
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
