--- a/openapi-defs/api_store/MDALL-fr.yaml
+++ b/openapi-defs/api_store/MDALL-fr.yaml
@@ -4,7 +4,15 @@ x-api-store-tags:
   - devices
   - services
 x-api-store-short-desc: |
+  Le Bureau des matériels médicaux maintient une base de données sur tous les instruments médicaux de classe II, III ou IV vendus au Canada. Les instruments médicaux de classe I ne requiert pas une homologation des intruments médicaux. Ils sont réglementés par la Direction générale des opérations réglementaires et des régions (Conformité et application de la loi) au moyen des licences d'établissement.
 x-api-store-long-desc: |
+  Santé Canada est l'organe fédéral de réglementation des produits thérapeutiques, notamment des instruments médicaux. Il ne formule pas de conseils médicaux sur l'utilisation des produits figurant sur cette liste.
+
+  Le Bureau des matériels médicaux (Bureau) de la Direction des produits thérapeutiques, Santé Canada, est l'organe fédéral de réglementation responsable de l'homologation des instruments médicaux, conformément à la Loi sur les aliments et drogues et au Réglement sur les instruments médicaux.
+
+  Le Bureau maintient une base de données sur tous les instruments médicaux de classe II, III ou IV vendus au Canada. Les instruments médicaux de classe I ne requiert pas une homologation des intruments médicaux. Ils sont réglementés par la Direction générale des opérations réglementaires et des régions (Conformité et application de la loi) au moyen des licences d'établissement.
+
+  Seuls les produits figurant sur cette liste électronique peuvent être offerts pour la vente au Canada. Les instruments médicaux de classe 1 ou vendus aux fins d'essais expérimentaux et aux fins d'un accès spécial ne sont pas inclus.
 x-api-store-documentation: Veuillez consulter la documentation OpenAPI
 x-api-store-phone: '613-954-0285'
 x-api-store-sensitivity: Unclassified
