--- a/openapi-defs/api_store/NOC-en.yaml
+++ b/openapi-defs/api_store/NOC-en.yaml
@@ -5,8 +5,12 @@ x-api-store-tags:
   - drugs
   - veterinary
 x-api-store-short-desc: |
+  Notices of Compliance (NOC) issued to manufacturers following the satisfactory review of a submission for a new drug, and signifies compliance with the Food and Drug Regulations.
 x-api-store-long-desc: |
-x-api-store-documentation: Veuillez consulter la documentation OpenAPI
+  A Notice of Compliance (NOC) is issued to a manufacturer following the satisfactory review of a submission for a new drug, and signifies compliance with the Food and Drug Regulations.
+
+  The database is updated nightly and contains NOC information on human drugs from January 1, 1994 to date. It also contains NOC information on Veterinary drugs from September 19, 2000 to date. Through a phased in approach Health Canada will populate the remaining NOCs for Veterinary drugs from January 1, 1994 to September 18, 2000.
+x-api-store-documentation: See OpenAPI documentation
 x-api-store-phone: '613-954-2964'
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
