--- a/openapi-defs/api_store/SR-fr.yaml
+++ b/openapi-defs/api_store/SR-fr.yaml
@@ -4,7 +4,9 @@ x-api-store-tags:
   - health products
   - drugs
 x-api-store-short-desc: |
+  Le site internet, Registre des médicaments et des produits de santé, regroupe l’information au sujet des licences de produit, des inspections, de l’achat et de l’utilisation sécuritaire des produits, des effets secondaires, des rappels et des plaintes.
 x-api-store-long-desc: |
+  Le site internet, Registre des médicaments et des produits de santé, regroupe l’information au sujet des licences de produit, des inspections, de l’achat et de l’utilisation sécuritaire des produits, des effets secondaires, des rappels et des plaintes.
 x-api-store-documentation: Veuillez consulter la documentation OpenAPI
 x-api-store-phone: '613-222-7658'
 x-api-store-sensitivity: Unclassified
@@ -14,11 +16,8 @@ x-api-store-plans:
     description: All users should subscribe to the Public Plan.
 info:
   title: Les rapports sommaires
-  description:
-    Le site internet, Registre des médicaments et des produits de santé,
-    regroupe l’information au sujet des licences de produit, des inspections, de
-    l’achat et de l’utilisation sécuritaire des produits, des effets
-    secondaires, des rappels et des plaintes.
+  description: |
+    Le site internet, Registre des médicaments et des produits de santé, regroupe l’information au sujet des licences de produit, des inspections, de l’achat et de l’utilisation sécuritaire des produits, des effets secondaires, des rappels et des plaintes.
   version: 1
   contact:
     name: Scott Kennedy
