final french translations

--- a/openapi-defs/api_store/CTA-fr.yaml
+++ b/openapi-defs/api_store/CTA-fr.yaml
@@ -13,8 +13,8 @@ x-api-store-phone: '613-954-2964'
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
-    name: Public Plan
-    description: All users should subscribe to the Public Plan.
+    name: Plan public
+    description: Tous les utilisateurs doivent souscrire au plan public
 info:
   title: Base de données des essais cliniques (BDEC)
   description: |
@@ -353,5 +353,5 @@ parameters:
     type: string
     in: header
     required: true
-    description: The identifier assigned to your account for accessing the API
+    description: L'identifiant attribué à votre compte pour accéder à l'API
     x-data-threescale-name: user_keys
