--- a/openapi-defs/api_store/CNF-fr.yaml
+++ b/openapi-defs/api_store/CNF-fr.yaml
@@ -12,8 +12,8 @@ x-api-store-phone: '613-558-7731'
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
-    name: Public Plan
-    description: All users should subscribe to the Public Plan.
+    name: Plan public
+    description: Tous les utilisateurs doivent souscrire au plan public
 info:
   title: Fichier canadien sur les éléments nutritifs (FCÉN)
   description: Le Fichier canadien sur les éléments nutritifs (FCÉN) est la base de données de référence sur la composition des aliments qui nous informe de la quantité des éléments nutritifs dans les aliments couramment consommés au Canada.
@@ -458,5 +458,5 @@ parameters:
     type: string
     in: header
     required: true
-    description: The identifier assigned to your account for accessing the API
+    description: L'identifiant attribué à votre compte pour accéder à l'API
     x-data-threescale-name: user_keys
