--- a/openapi-defs/api_store/CVP-fr.yaml
+++ b/openapi-defs/api_store/CVP-fr.yaml
@@ -11,8 +11,8 @@ x-api-store-phone: '613-697-3966'
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
-    name: Public Plan
-    description: All users should subscribe to the Public Plan.
+    name: Plan public
+    description: Tous les utilisateurs doivent souscrire au plan public
 info:
   title: Base de données en ligne des effets indésirables de Canada Vigilance (BDEI)
   description: La base de données en ligne des effets indésirables de Canada Vigilance renferme de l'information au sujet des effets indésirables soupçonnés (ou effets secondaires) associés à des produits de santé.
@@ -714,5 +714,5 @@ parameters:
     type: string
     in: header
     required: true
-    description: The identifier assigned to your account for accessing the API
+    description: L'identifiant attribué à votre compte pour accéder à l'API
     x-data-threescale-name: user_keys
