--- a/openapi-defs/api_store/LNHPD-fr.yaml
+++ b/openapi-defs/api_store/LNHPD-fr.yaml
@@ -12,8 +12,8 @@ x-api-store-phone: '613-355-0261'
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
-    name: Public Plan
-    description: All users should subscribe to the Public Plan.
+    name: Plan public
+    description: Tous les utilisateurs doivent souscrire au plan public
 info:
   title: Base de donnée de produits de santé naturels homologués (BDPSNH)
   description: La Base de données des produits de santé naturels homologués (BDPSNH) contient des renseignements sur les produits de santé naturels (PSN) ayant reçu une licence de mise en marché de Santé Canada.
@@ -586,5 +586,5 @@ parameters:
     type: string
     in: header
     required: true
-    description: The identifier assigned to your account for accessing the API
+    description: L'identifiant attribué à votre compte pour accéder à l'API
     x-data-threescale-name: user_keys
