--- a/openapi-defs/api_store/SR-fr.yaml
+++ b/openapi-defs/api_store/SR-fr.yaml
@@ -12,8 +12,8 @@ x-api-store-phone: '613-222-7658'
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
   public:
-    name: Public Plan
-    description: All users should subscribe to the Public Plan.
+    name: Plan public
+    description: Tous les utilisateurs doivent souscrire au plan public
 info:
   title: Les rapports sommaires
   description: |
@@ -623,16 +623,10 @@ parameters:
       - xml
     default: json
     description: Détermine si le résultat est en format JSON ou XML.
-  PathID:
-    name: id
-    description: The drug product code identifier
-    in: path
-    type: string
-    required: true
   UserKeys:
     name: user-key
     type: string
     in: header
     required: true
-    description: The identifier assigned to your account for accessing the API
+    description: L'identifiant attribué à votre compte pour accéder à l'API
     x-data-threescale-name: user_keys
