--- a/openapi-defs/api_store/CNF-fr.yaml
+++ b/openapi-defs/api_store/CNF-fr.yaml
@@ -17,7 +17,7 @@ x-api-store-plans:
 info:
   title: Fichier canadien sur les éléments nutritifs (FCÉN)
   description: Le Fichier canadien sur les éléments nutritifs (FCÉN) est la base de données de référence sur la composition des aliments qui nous informe de la quantité des éléments nutritifs dans les aliments couramment consommés au Canada.
-  version: '1'
+  version: '1.0.0'
   contact:
     name: Marie-France Verreault
     email: marie-france.verreault@canada.ca
@@ -25,7 +25,7 @@ info:
 schemes:
   - https
 host: cta-hc-sc-apicast-production.api.canada.ca
-basePath: /api/canadian-nutrient-file/
+basePath: /v1/
 produces:
   - application/json
   - application/xml
