--- a/openapi-defs/api_store/CTA-en.yaml
+++ b/openapi-defs/api_store/CTA-en.yaml
@@ -19,7 +19,7 @@ info:
   title: Clinical Trial Database (CTA)
   description: |
     The Clinical Trials Database provides to the public a listing of specific information relating to phase I, II and III clinical trials in patients. The database is managed by Health Canada and provides a source of information about Canadian clinical trials involving human pharmaceutical and biological drugs.
-  version: 1
+  version: '1.0.0'
   contact:
     name: Valerie Tweedle
     email: valerie.tweedle@canada.ca
@@ -27,7 +27,7 @@ info:
 schemes:
   - https
 host: cta-hc-sc-apicast-production.api.canada.ca
-basePath: /api/clinical-trial/
+basePath: /v1/
 produces:
   - application/json
   - application/xml
