--- a/openapi-defs/api_store/CTA-fr.yaml
+++ b/openapi-defs/api_store/CTA-fr.yaml
@@ -19,7 +19,7 @@ info:
   title: Base de données des essais cliniques (BDEC)
   description: |
     La base de données sur les essais cliniques donne à la population une liste de renseignements précis sur les essais cliniques des phases I, II et III chez les patients. Gérée par Santé Canada, la base de données constitue une source d'information sur les essais cliniques effectués au Canada avec les médicaments pharmaceutiques et biologiques à usage humain.
-  version: 1
+  version: '1.0.0'
   contact:
     name: Valerie Tweedle
     email: valerie.tweedle@canada.ca
@@ -27,7 +27,7 @@ info:
 schemes:
   - https
 host: cta-hc-sc-apicast-production.api.canada.ca
-basePath: /api/clinical-trial/
+basePath: /v1/
 produces:
   - application/json
   - application/xml
