--- a/openapi-defs/api_store/CVP-fr.yaml
+++ b/openapi-defs/api_store/CVP-fr.yaml
@@ -16,7 +16,7 @@ x-api-store-plans:
 info:
   title: Base de données en ligne des effets indésirables de Canada Vigilance (BDEI)
   description: La base de données en ligne des effets indésirables de Canada Vigilance renferme de l'information au sujet des effets indésirables soupçonnés (ou effets secondaires) associés à des produits de santé.
-  version: 1
+  version: '1.0.0'
   contact:
     name: Bill Wilson
     email: billy.wilson@canada.ca
@@ -24,7 +24,7 @@ info:
 schemes:
   - https
 host: cvp-hc-sc-apicast-production.api.canada.ca
-basePath: /api/canada-vigilance/
+basePath: /v1/
 produces:
   - application/json
   - application/xml
