--- a/openapi-defs/api_store/DPD-fr.yaml
+++ b/openapi-defs/api_store/DPD-fr.yaml
@@ -27,7 +27,7 @@ info:
 
     Santé Canada est l'organisme fédéral qui réglemente les produits thérapeutiques et nous ne donnons pas de conseils médicaux sur l'utilisation des produits dans cette base de données. Pour de plus amples informations sur les choix de traitement, les choix de médicament et leurs utilisations, maladies, effets secondaires et interactions médicamenteuses, veuillez contacter votre professionnel de la santé.
 
-  version: 1
+  version: '1.0.0'
   contact:
     name: Valerie Tweedle
     email: valerie.tweedle@canada.ca
@@ -35,7 +35,7 @@ info:
 schemes:
   - https
 host: dpd-hc-sc-apicast-production.api.canada.ca
-basePath: /api/drug/
+basePath: /v1/
 produces:
   - application/json
   - application/xml
