--- a/openapi-defs/api_store/LNHPD-fr.yaml
+++ b/openapi-defs/api_store/LNHPD-fr.yaml
@@ -17,7 +17,7 @@ x-api-store-plans:
 info:
   title: Base de donnée de produits de santé naturels homologués (BDPSNH)
   description: La Base de données des produits de santé naturels homologués (BDPSNH) contient des renseignements sur les produits de santé naturels (PSN) ayant reçu une licence de mise en marché de Santé Canada.
-  version: 1
+  version: '1.0.0'
   contact:
     name: David Kong
     email: david.kong@canada.ca
@@ -25,7 +25,7 @@ info:
 schemes:
   - https
 host: lnhpd-hc-sc-apicast-production.api.canada.ca
-basePath: /api/homologation-naturel/
+basePath: /v1/
 produces:
   - application/json
   - application/xml
