--- a/openapi-defs/api_store/MDALL-en.yaml
+++ b/openapi-defs/api_store/MDALL-en.yaml
@@ -30,7 +30,7 @@ info:
     The Bureau maintains a database of all licensed Class II, III, and IV medical devices offered for sale in Canada. Class I medical devices do not require a medical device licence and are monitored by the Regulatory Operations and Regions Branch (Compliance and Enforcement) through Establishment Licensing.
 
     Only products which appear in this database listing may be offered for general marketing purposes in Canada. Class I Devices, or devices which relate to Investigational Testing Authorization or Special Access do not appear in this listing.
-  version: 1
+  version: '1.0.0'
   contact:
     name: Sarah Chandler
     email: sarah.chandler@canada.ca
@@ -38,7 +38,7 @@ info:
 schemes:
   - https
 host: mdall-hc-sc-apicast-production.api.canada.ca
-basePath: /api/medical-devices/
+basePath: /v1/
 produces:
   - application/json
   - application/xml
