--- a/openapi-defs/api_store/MDALL-fr.yaml
+++ b/openapi-defs/api_store/MDALL-fr.yaml
@@ -30,7 +30,7 @@ info:
     Le Bureau maintient une base de données sur tous les instruments médicaux de classe II, III ou IV vendus au Canada. Les instruments médicaux de classe I ne requiert pas une homologation des intruments médicaux. Ils sont réglementés par la Direction générale des opérations réglementaires et des régions (Conformité et application de la loi) au moyen des licences d'établissement.
 
     Seuls les produits figurant sur cette liste électronique peuvent être offerts pour la vente au Canada. Les instruments médicaux de classe 1 ou vendus aux fins d'essais expérimentaux et aux fins d'un accès spécial ne sont pas inclus.
-  version: 1
+  version: '1.0.0'
   contact:
     name: Sarah Chandler
     email: sarah.chandler@canada.ca
@@ -38,7 +38,7 @@ info:
 schemes:
   - https
 host: mdall-hc-sc-apicast-production.api.canada.ca
-basePath: /api/instrument-medicaux/
+basePath: /v1/
 produces:
   - application/json
   - application/xml
