--- a/openapi-defs/api_store/SR-en.yaml
+++ b/openapi-defs/api_store/SR-en.yaml
@@ -17,7 +17,7 @@ x-api-store-plans:
 info:
   title: Summary Reports
   description: The Drug and Health Product Register brings together information on product licences, drug and health product inspections, buying and using products safely, and side effects, recalls and complaints.
-  version: 1
+  version: '1.0.0'
   contact:
     name: Scott Kennedy
     email: scott.kennedy2@canada.ca
@@ -25,7 +25,7 @@ info:
 schemes:
   - https
 host: sr-hc-sc-apicast-production.api.canada.ca
-basePath: /api/summary-report/api/
+basePath: /v1/
 produces:
   - application/json
   - application/xml
