--- a/openapi-defs/api_store/DPD-en.yaml
+++ b/openapi-defs/api_store/DPD-en.yaml
@@ -26,7 +26,7 @@ info:
     Human, veterinary, disinfectants and Schedule C drugs (e.g. radiopharmaceutical products) approved products will be available in the DPD online at the time of authorization, with the exception of three monographed product groups under Division 1, Part C of the Food and Drug Regulations: sunscreen (sunscreens, lipstick making a SPF claim, cosmetic-like products with sunscreen claims, etc.), anti-dandruff shampoo, and hard surface disinfectants. For these products, applications filed after June 15, 2015, there may be a six month delay after approval for the inclusion in the DPD online.
 
     Health Canada is the federal regulator of therapeutic products and does not provide medical advice on the use of the products identified in this database. For information related to treatment options, choices of medications and their uses, illnesses, side effects or drug interactions, please contact your health care professional. For information on where these products are sold, please contact the individual company directly.
-  version: 1
+  version: '1.0.0'
   contact:
     name: Valerie Tweedle
     email: valerie.tweedle@canada.ca
@@ -34,7 +34,7 @@ info:
 schemes:
   - https
 host: dpd-hc-sc-apicast-production.api.canada.ca
-basePath: /api/drug/
+basePath: /v1/
 produces:
   - application/json
   - application/xml
