--- a/openapi-defs/api_store/SR-fr.yaml
+++ b/openapi-defs/api_store/SR-fr.yaml
@@ -18,7 +18,7 @@ info:
   title: Les rapports sommaires
   description: |
     Le site internet, Registre des médicaments et des produits de santé, regroupe l’information au sujet des licences de produit, des inspections, de l’achat et de l’utilisation sécuritaire des produits, des effets secondaires, des rappels et des plaintes.
-  version: 1
+  version: '1.0.0'
   contact:
     name: Scott Kennedy
     email: scott.kennedy2@canada.ca
@@ -26,7 +26,7 @@ info:
 schemes:
   - https
 host: sr-hc-sc-apicast-production.api.canada.ca
-basePath: /api/summary-report/api/
+basePath: /v1/
 produces:
   - application/json
   - application/xml
