wrapped documentation in p tag

--- a/openapi-defs/api_store/CNF-fr.yaml
+++ b/openapi-defs/api_store/CNF-fr.yaml
@@ -7,7 +7,7 @@ x-api-store-short-desc: |
   Le Fichier canadien sur les éléments nutritifs (FCÉN) est la base de données de référence sur la composition des aliments qui nous informe de la quantité des éléments nutritifs dans les aliments couramment consommés au Canada.
 x-api-store-long-desc: |
   Le Fichier canadien sur les éléments nutritifs (FCÉN) est la base de données de référence sur la composition des aliments qui nous informe de la quantité des éléments nutritifs dans les aliments couramment consommés au Canada.
-x-api-store-documentation: Veuillez consulter la documentation OpenAPI
+x-api-store-documentation: <p>Veuillez consulter la documentation OpenAPI</p>
 x-api-store-phone: '613-558-7731'
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
