--- a/openapi-defs/api_store/CTA-en.yaml
+++ b/openapi-defs/api_store/CTA-en.yaml
@@ -8,7 +8,7 @@ x-api-store-short-desc: |
   The Clinical Trials Database provides to the public a listing of specific information relating to phase I, II and III clinical trials in patients. The database is managed by Health Canada and provides a source of information about Canadian clinical trials involving human pharmaceutical and biological drugs.
 x-api-store-long-desc: |
   The Clinical Trials Database provides to the public a listing of specific information relating to phase I, II and III clinical trials in patients. The database is managed by Health Canada and provides a source of information about Canadian clinical trials involving human pharmaceutical and biological drugs.
-x-api-store-documentation: See OpenAPI documentation
+x-api-store-documentation: <p>See OpenAPI documentation</p>
 x-api-store-phone: '613-954-2964'
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
