--- a/openapi-defs/api_store/CVP-fr.yaml
+++ b/openapi-defs/api_store/CVP-fr.yaml
@@ -6,7 +6,7 @@ x-api-store-short-desc: |
   La base de données en ligne des effets indésirables de Canada Vigilance renferme de l'information au sujet des effets indésirables soupçonnés (ou effets secondaires) associés à des produits de santé.
 x-api-store-long-desc: |
   La base de données en ligne des effets indésirables de Canada Vigilance renferme de l'information au sujet des effets indésirables soupçonnés (ou effets secondaires) associés à des produits de santé.
-x-api-store-documentation: Veuillez consulter la documentation OpenAPI
+x-api-store-documentation: <p>Veuillez consulter la documentation OpenAPI</p>
 x-api-store-phone: '613-697-3966'
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
