--- a/openapi-defs/api_store/LNHPD-fr.yaml
+++ b/openapi-defs/api_store/LNHPD-fr.yaml
@@ -7,7 +7,7 @@ x-api-store-short-desc: |
   La Base de données des produits de santé naturels homologués (BDPSNH) contient des renseignements sur les produits de santé naturels (PSN) ayant reçu une licence de mise en marché de Santé Canada.
 x-api-store-long-desc: |
   La Base de données des produits de santé naturels homologués (BDPSNH) contient des renseignements sur les produits de santé naturels (PSN) ayant reçu une licence de mise en marché de Santé Canada.
-x-api-store-documentation: Veuillez consulter la documentation OpenAPI
+x-api-store-documentation: <p>Veuillez consulter la documentation OpenAPI</p>
 x-api-store-phone: '613-355-0261'
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
