--- a/openapi-defs/api_store/SR-en.yaml
+++ b/openapi-defs/api_store/SR-en.yaml
@@ -7,7 +7,7 @@ x-api-store-short-desc: |
   The Drug and Health Product Register brings together information on product licences, drug and health product inspections, buying and using products safely, and side effects, recalls and complaints.
 x-api-store-long-desc: |
   The Drug and Health Product Register brings together information on product licences, drug and health product inspections, buying and using products safely, and side effects, recalls and complaints.
-x-api-store-documentation: See OpenAPI documentation
+x-api-store-documentation: <p>See OpenAPI documentation</p>
 x-api-store-phone: '613-222-7658'
 x-api-store-sensitivity: Unclassified
 x-api-store-plans:
