--- a/openapi-defs/api_store/MDALL-fr.yaml
+++ b/openapi-defs/api_store/MDALL-fr.yaml
@@ -68,7 +68,7 @@ paths:
           description: Affiche les homogolations dont le numéro d'identification de l'entreprise.
       responses:
         '200':
-          description: Returns a list of all licences, or if an ID is provided, the list of all licences that correspond to the given licence number
+          description: ''
           schema:
             type: array
             items:
@@ -111,7 +111,7 @@ paths:
           description: Affiche les entreprises qui contiennent bayer dans leur nom.
       responses:
         '200':
-          description: Returns a list of all companies, or if an ID is provided, the list of all companies that correspond to the given company ID
+          description: ''
           schema:
             type: array
             items:
@@ -144,7 +144,7 @@ paths:
           description: Affiche les instruments médicaux qui contiennent le nom.
       responses:
         '200':
-          description: Returns a list of all devices, or if an ID is provided, the list of all devices that correspond to the given device identification number
+          description: ''
           schema:
             type: array
             items:
@@ -177,7 +177,7 @@ paths:
           description: Affiche les instruments qui contiennent le donné dans leur identificateur de l'instrument.
       responses:
         '200':
-          description: Returns a list of all device identifiers, or if an ID is provided, the list of all device identifiers that correspond to the given device identifier
+          description: ''
           schema:
             type: array
             items:
@@ -205,7 +205,7 @@ paths:
           description: Affiche un type de demande d'homologation selon le code d'un type de demande d'homologation spécifié dans la requête.
       responses:
         '200':
-          description: Returns a list of all licence types, or if a code is provided, the list of all licence types that correspond to the given code
+          description: ''
           schema:
             type: array
             items:
@@ -234,7 +234,7 @@ paths:
 
       responses:
         '200':
-          description: Returns a list of all locations, or if an ID is provided, the list of all locations that correspond to the given licence number
+          description: ''
           schema:
             type: array
             items:
