--- a/openapi-defs/api_store/NOC-fr.yaml
+++ b/openapi-defs/api_store/NOC-fr.yaml
@@ -49,7 +49,7 @@ paths:
         - $ref: '#/parameters/QueryNoticeOfComplianceNumber'
       responses:
         '200':
-          description: Returns a list of all drug products, or if an ID is provided, the list of all drug products that correspond to the given Notice of Compliance number
+          description: ''
           schema:
             type: array
             items:
@@ -74,7 +74,7 @@ paths:
         - $ref: '#/parameters/QueryNoticeOfComplianceNumber'
       responses:
         '200':
-          description: Returns a list of all compliance notices, or if an ID is provided, the list of all notices of compliance that correspond to the given Notice of Compliance number
+          description: ''
           schema:
             type: array
             items:
@@ -99,7 +99,7 @@ paths:
         - $ref: '#/parameters/QueryNoticeOfComplianceNumber'
       responses:
         '200':
-          description: Returns a list of all dosage forms, or if an ID is provided, the list of all dosage forms that correspond to the given Notice of Compliance number
+          description: ''
           schema:
             type: array
             items:
@@ -124,7 +124,7 @@ paths:
         - $ref: '#/parameters/QueryNoticeOfComplianceNumber'
       responses:
         '200':
-          description: Returns a list of all medicinal ingredients, or if an ID is provided, the list of all medicinal ingredients that correspond to the given Notice of Compliance number
+          description: ''
           schema:
             type: array
             items:
@@ -149,7 +149,7 @@ paths:
         - $ref: '#/parameters/QueryNoticeOfComplianceNumber'
       responses:
         '200':
-          description: Returns a list of all administration routes, or if an ID is provided, the list of all routes that correspond to the given Notice of Compliance number
+          description: ''
           schema:
             type: array
             items:
@@ -174,7 +174,7 @@ paths:
         - $ref: '#/parameters/QueryNoticeOfComplianceNumber'
       responses:
         '200':
-          description: Returns a list of all veterinary species, or if an ID is provided, the list of all species that correspond to the given Notice of Compliance number
+          description: ''
           schema:
             type: array
             items:
