--- a/openapi-defs/api_store/DPD-fr.yaml
+++ b/openapi-defs/api_store/DPD-fr.yaml
@@ -13,7 +13,7 @@ x-api-store-long-desc: |
   Santé Canada est l'organisme fédéral qui réglemente les produits thérapeutiques et nous ne donnons pas de conseils médicaux sur l'utilisation des produits dans cette base de données. Pour de plus amples informations sur les choix de traitement, les choix de médicament et leurs utilisations, maladies, effets secondaires et interactions médicamenteuses, veuillez contacter votre professionnel de la santé.
 x-api-store-documentation: <p>Veuillez consulter la documentation OpenAPI</p>
 x-api-store-phone: '613-954-2964'
-x-api-store-sensitivity: Unclassified
+x-api-store-sensitivity: Non classifié
 x-api-store-plans:
   public:
     name: Plan public
@@ -493,7 +493,7 @@ definitions:
 
   DrugCode:
     type: string
-    description: The code assigned to each drug product
+    description: Le code attribué à chaque produit pharmaceutique.
 
   Packaging:
     type: object
