--- a/openapi-defs/api_store/NOC-fr.yaml
+++ b/openapi-defs/api_store/NOC-fr.yaml
@@ -12,7 +12,7 @@ x-api-store-long-desc: |
   La base de données est mise à jour tous les soirs et elle comprend des renseignements sur les AC concernant les médicaments pour usage humain émis depuis le 1er janvier 1994 jusqu'à ce jour. Elle comprend également les renseignements sur les AC concernant les médicaments vétérinaires émis depuis le 19 septembre 2000 jusqu'à ce jour. Santé Canada ajoutera progressivement les AC concernant les médicaments vétérinaires émis entre le 1er janvier 1994 et le 18 septembre 2000.
 x-api-store-documentation: <p>Veuillez consulter la documentation OpenAPI</p>
 x-api-store-phone: '613-954-2964'
-x-api-store-sensitivity: Unclassified
+x-api-store-sensitivity: Non classifié
 x-api-store-plans:
   public:
     name: Plan public
@@ -409,7 +409,7 @@ parameters:
     name: id
     type: string
     in: query
-    description: Affiche l'avis de conformité selon le numéro d'un avis de conformité spécifié dans la requête. number
+    description: Affiche l'avis de conformité selon le numéro d'un avis de conformité spécifié dans la requête
   UserKeys:
     name: 'user-key'
     type: string
