--- a/openapi-defs/api_store/MDALL-fr.yaml
+++ b/openapi-defs/api_store/MDALL-fr.yaml
@@ -15,7 +15,7 @@ x-api-store-long-desc: |
   Seuls les produits figurant sur cette liste électronique peuvent être offerts pour la vente au Canada. Les instruments médicaux de classe 1 ou vendus aux fins d'essais expérimentaux et aux fins d'un accès spécial ne sont pas inclus.
 x-api-store-documentation: <p>Veuillez consulter la documentation OpenAPI</p>
 x-api-store-phone: '613-954-0285'
-x-api-store-sensitivity: Unclassified
+x-api-store-sensitivity: Non classifié
 x-api-store-plans:
   public:
     name: Plan public
